# pv-estimator

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  ML_EXPERIMENT_PLAN.md  ML_MODEL_PLAN.md  README.md  SOURCE_HARMONIZATION.md  SPEC.md
.github/: branch-protection-smoke.md
.github/workflows/: ci.yml
artifacts/source-models-768x8-int8/: source-model-artifacts.json
crates/pv-cli/: Cargo.toml
crates/pv-cli/src/: main.rs
crates/pv-cli/tests/: cli.rs
crates/pv-core/: Cargo.toml
crates/pv-core/src/: catalog.rs  ids.rs  issues.rs  lib.rs  project.rs  simulation.rs  source_model.rs  units.rs  weather.rs
crates/pv-data/: Cargo.toml  build.rs
crates/pv-data/src/: lib.rs
crates/pv-model/: Cargo.toml
crates/pv-model/src/: lib.rs
crates/pv-service/: Cargo.toml
crates/pv-service/src/: main.rs
crates/pv-tui/: Cargo.toml
crates/pv-tui/src/: main.rs
crates/pv-tui/src/snapshots/: arrays_editor.snap  default_layout.snap  empty_price_selected.snap  four_panel_layout.snap  location_search.snap  long_arrays_edit.snap  populated_estimate.snap  shape_editor.snap  shape_preset_picker.snap  simulation_result.snap  simulation_runs_picker.snap
crates/pv-wasm/: Cargo.toml
crates/pv-wasm/src/: lib.rs
docs/: CLI.md  MODEL_CARD.md  PACKAGING.md  TROUBLESHOOTING.md  TUI.md
docs/man/: pv-tui.1  pv.1
experiments/ml-weather/: README.md  SOURCE_ENSEMBLE_DATASET_PLAN.md  SOURCE_MODEL_REPRODUCTION.md  requirements-geo.txt
experiments/ml-weather/config/: aux_geography_sources.json  global_grid_368_interpolation_locations.csv  global_grid_408_locations.csv  global_grid_7056_locations.csv  global_grid_7056_locations_shuffled.csv  italy_benchmark_cities_50.csv  pilot_locations.csv  pvgis_source_databases.json  regional_benchmark_cities_120.csv  source_ensemble_locations_2000.csv  source_model_registry.json
experiments/ml-weather/results/: 2026-05-26_interpolation_grid_368_eval.md  2026-05-26_nasa_power_global_grid_408.md  2026-05-26_weather_mlp_100k_gpu_run1.md  2026-05-26_weather_mlp_100k_gpu_run3_8m_balanced.md  2026-05-26_weather_mlp_10k_run2.md  2026-05-26_weather_mlp_architecture_sweep_8m.md  2026-05-27_nasa_power_global_grid_7056_partial.md  2026-05-29_aux_geography_global_grid_7056.md  2026-05-29_dense_7056_geo_aux_features.md  2026-05-30_climate_normals_compressor.md  2026-05-30_nasa_pvgis_model_source_split.md  2026-05-30_pvgis_benchmark_30.md  2026-05-31_pvgis_408_coverage_pilot.md  2026-05-31_source_ensemble_2000_coverage_probe.md  2026-06-01_regional_benchmark_120.md  2026-06-01_source_ensemble_validation.md  2026-06-01_source_models_768x8.md
experiments/ml-weather/scripts/: augment_weather_cache_with_aux.py  augment_weather_cache_with_climate_normals.py  augment_weather_cache_with_predicted_climate_normals.py  build_climate_normals.rs  build_geography_feature_artifact.py  build_sarah3_grid_mask.py  build_source_coverage_lists.py  check_source_geo_v2_gate.py  collect_aux_geography.py  compare_nasa_pvgis_model.py  compare_pvgis_climate_model.py  download_nasa_power.py  (+21 more)
reproduction/source-models/: README.md  RUNBOOK.md
xtask/: Cargo.toml
xtask/src/: main.rs
(+27 files in other folders)
