[package]
name = "pv-model"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
csv = "1.4"
ndarray = "0.17"
ort = "=2.0.0-rc.12"
pv-core = { path = "../pv-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
