[package]
name = "pv-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
pv-core = { path = "../pv-core" }
pv-data = { path = "../pv-data" }
pv-model = { path = "../pv-model" }
ratatui = "0.29"
